Eliminated URL and replaced with URI